--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "flowbite": "^2.1.1",
     "flowbite-react": "^0.6.4",
     "react": "^18.2.0",
+    "bootstrap": "^5.3.2" ,
     "react-bootstrap": "^2.9.1",
     "react-dom": "^18.2.0",
     "react-html-table-to-excel": "^2.0.0",
