--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emotion/react": "^11.11.3",
+    "@emotion/styled": "^11.11.0",
     "@fortawesome/fontawesome-svg-core": "^6.4.2",
     "@fortawesome/free-brands-svg-icons": "^6.4.2",
     "@fortawesome/free-solid-svg-icons": "^6.4.2",
@@ -10,15 +12,16 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "bootstrap": "^5.3.2",
     "flowbite": "^2.1.1",
     "flowbite-react": "^0.6.4",
     "react": "^18.2.0",
-    "bootstrap": "^5.3.2" ,
     "react-bootstrap": "^2.9.1",
     "react-dom": "^18.2.0",
     "react-html-table-to-excel": "^2.0.0",
     "react-router-dom": "^6.19.0",
     "react-scripts": "5.0.1",
+    "react-spinners": "^0.13.8",
     "sweetalert2": "^11.10.1",
     "sweetalert2-react-content": "^5.0.7",
     "web-vitals": "^2.1.4"
