--- a/package.json
+++ b/package.json
@@ -7,18 +7,28 @@
     "@emotion/styled": "^11.11.0",
     "@fortawesome/fontawesome-svg-core": "^6.4.2",
     "@fortawesome/free-brands-svg-icons": "^6.4.2",
+    "@fortawesome/free-regular-svg-icons": "^6.7.2",
     "@fortawesome/free-solid-svg-icons": "^6.4.2",
     "@fortawesome/react-fontawesome": "^0.2.0",
+    "@heroicons/react": "^2.2.0",
+    "@material-tailwind/react": "^2.1.10",
+    "@tailwindcss/forms": "^0.5.9",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^1.7.9",
     "bootstrap": "^5.3.2",
-    "flowbite": "^2.1.1",
-    "flowbite-react": "^0.6.4",
+    "chart.js": "^4.4.6",
+    "flowbite-react": "^0.10.2",
+    "framer-motion": "^11.3.24",
+    "install": "^0.13.0",
+    "npm": "^10.9.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.9.1",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
     "react-html-table-to-excel": "^2.0.0",
+    "react-icons": "^5.3.0",
     "react-router-dom": "^6.19.0",
     "react-scripts": "5.0.1",
     "react-spinners": "^0.13.8",
@@ -53,6 +63,6 @@
   "devDependencies": {
     "autoprefixer": "^10.4.16",
     "postcss": "^8.4.31",
-    "tailwindcss": "^3.3.5"
+    "tailwindcss": "^3.4.15"
   }
 }
