--- a/package.json
+++ b/package.json
@@ -35,7 +35,8 @@
     "react-spinners": "^0.13.8",
     "sweetalert2": "^11.10.1",
     "sweetalert2-react-content": "^5.0.7",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "xlsx": "^0.18.5"
   },
   "scripts": {
     "start": "react-scripts start",
